--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h2{
     width: 10vw;
     height: 20vh;
     padding: 5px 10px 15px 20px;
-    border: 4px solid darkblue;
+    border: 4px solid white;
     background-color: white;
     margin: auto;
 
@@ -169,7 +169,7 @@ h2:has(+ p) {
         width: 10vw;
         height: 20vh;
         padding: 5px 10px 15px 20px;
-        border: 4px solid darkblue;
+        border: 4px solid white;
         background-color: white;
         margin: auto;
     
