--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@ body{
 
 /*Universal selector*/
 *{
-    border: 3px solid blue;
+    border: 3px solid white; 
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
 }
 
 /*Element selectors with diff. color types*/
@@ -42,7 +46,7 @@ h2{
     width: 10vw;
     height: 20vh;
     padding: 5px 10px 15px 20px;
-    border: 4px solid darkblue;
+    border: 2px solid darkblue;
     background-color: white;
     margin: auto;
 
@@ -203,4 +207,4 @@ h2:has(+ p) {
     }
 }
 
-/*Leftover tasks: Responsiveness, Fonts (General)*/
+
