update html meeting review format and font

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 *{
     border: 3px solid white; 
     font-family: "Playfair Display", serif;
-    font-optical-sizing: auto;
+    /*font-optical-sizing: auto;*/
     font-weight: 500;
     font-style: normal;
 }
